mejorando diseño de las paginas

--- a/especialidades.html
+++ b/especialidades.html
@@ -98,9 +98,9 @@
     </header>
     <main class="container-fluid mainEspecialidad">
       <div class="row especialidad">
-        <div class="col-12 especialidad--color">
-          <h2>RETINA</h2>
+        <div class="col-lg-6 col-md-12">
           <div>
+            <h2>RETINA</h2>
             <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Martes</h4>
@@ -119,11 +119,9 @@
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
-      </div>
-      <div class="row especialidad">
-        <div class="col-12">
-          <h2>GLAUCOMA</h2>
+        <div class="col-lg-6 col-md-12">
           <div>
+            <h2>GLAUCOMA</h2>
             <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Martes</h4>
@@ -135,46 +133,18 @@
             <h4>Miércoles y Jueves</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
+          <div>
+            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
         </div>
       </div>
       <div class="row especialidad">
-        <div class="col-12 especialidad--color">
+        <div class="col-lg-6 col-md-12">
           <h2>CÓRNEA Y CATARATAS</h2>
           <div>
-            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Miércoles y Jueves</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-          <div>
-            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Viernes</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-        </div>
-      </div>
-      <div class="row especialidad">
-        <div class="col-12">
-          <h2>UVEÍTIS</h2>
-          <div>
-            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Viernes</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-        </div>
-      </div>
-      <div class="row especialidad">
-        <div class="col-12 especialidad--color">
-          <h2>SUPERFICIE OCULAR</h2>
-          <div>
-            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Lunes y Martes</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-          <div>
             <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Miércoles y Jueves</h4>
@@ -187,47 +157,115 @@
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
-      </div>
-      <div class="row especialidad">
-        <div class="col-12">
-          <h2>ESTRABISMO</h2>
+        <div class="col-lg-6 col-md-12">
           <div>
+            <h2>UVEÍTIS</h2>
             <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Lunes y Martes</h4>
+            <h4>Viernes</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
-        </div>
-      </div>
-      <div class="row especialidad especialidad--color">
-        <div class="col-12">
-          <h2>VÍAS LAGRIMALES Y PLÁSTICA OCULAR</h2>
-          <div>
-            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Lunes y Martes</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-        </div>
-      </div>
-      <div class="row especialidad">
-        <div class="col-12">
-          <h2>NEUROOFTALMOLOGÍA</h2>
-          <div>
-            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Lunes y Miércoles</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-        </div>
-      </div>
-      <div class="row especialidad especialidad--color">
-        <div class="col-12">
-          <h2>BAJA VISIÓN</h2>
           <div>
             <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+        </div>
+      </div>
+      <div class="row especialidad">
+        <div class="col-lg-6 col-md-12">
+          <div>
+            <h2>SUPERFICIE OCULAR</h2>
+            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Miércoles y Jueves</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-12">
+          <div>
+            <h2>ESTRABISMO</h2>
+            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+        </div>
+      </div>
+      <div class="row especialidad">
+        <div class="col-lg-6 col-md-12">
+          <div>
+            <h2>VÍAS LAGRIMALES Y PLÁSTICA OCULAR</h2>
+            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-12">
+          <div>
+            <h2>NEUROOFTALMOLOGÍA</h2>
+            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+        </div>
+      </div>
+      <div class="row especialidad">
+        <div class="col-lg-6 col-md-12">
+          <div>
+            <h2>BAJA VISIÓN</h2>
+            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <h2>GUARDIA OFTALMOLÓGICA</h2>
+            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+            <div>
+              <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
+              <h3>Dr/Dra. APELLIDO, Nombre</h3>
+              <h4>Lunes y Martes</h4>
+              <h5><a href="portal.html">Enviar Mensaje</a></h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-12">
+          <div>
+            <h2>CLÍNICA OFTALMOLÓGICA</h2>
+            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
