--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -96,37 +96,20 @@
         </div>
       </nav>
     </header>
-    <main class="container-fluid mainCentro">
-      <div class="row section1">
-        <div class="col-12">
-          <h4>
-            Somos un centro de alta complejidad dedicados al diagnostico y
-            tratamiento de patologías oftalmológicas.
-          </h4>
+    <main class="container-fluid-main">
+      <div class="novedades">
+        <div class="novedades--campañas">
+          <h2>Campañas<span class="badge bg-secondary">Novedad</span></h2>
         </div>
-        <div class="col-12">
-          <h4>
-            Tratamos patologías tales como: Miopía, Catarata, Opacificación
-            Capsular, Astigmatismo, Hipermetropia, Presbicia, Chalazión,
-            Estrabismo, Glaucoma, Pterigion, Desprendimiento de Retina y
-            Degeneracion macular.
-          </h4>
-        </div>
-        <div class="col-12">
-          <h4>
-            Contamos con equipamientos de última tecnología y con un equipo
-            médico calificado de gran trayectoria y calidez.
-          </h4>
-        </div>
-        <div class="col-12">
-          <h4>
-            Atendemos a pacientes de todo el país y contamos con un sistema
-            integral de agendamiento de turnos e historia clínica.
-          </h4>
+        <div class="novedades--contacto">
+          <h2>
+            ¡Enterate de todo lo que estamos haciendo a través de nuestras redes
+            sociales!
+          </h2>
         </div>
       </div>
-      <div class="row section2">
-        <div class="col-12 carousel--container">
+      <div class="row carousel--container">
+        <div class="col-12 carousel--container--item">
           <div
             id="carouselExampleSlidesOnly"
             class="carousel slide"
@@ -134,7 +117,11 @@
           >
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./img/child.jpg" class="d-block w-100" alt="slide1" />
+                <img
+                  src="./img/child-text.jpg"
+                  class="d-block w-100"
+                  alt="slide1"
+                />
               </div>
               <div class="carousel-item">
                 <img src="./img/op.jpg" class="d-block w-100" alt="slide2" />
