--- a/estudios.html
+++ b/estudios.html
@@ -97,10 +97,9 @@
       </nav>
     </header>
     <main class="container-fluid mainEstudio">
-      <div class="row justify-content-between">
-        <div class="col-lg-2 col-md-2 col-xs-12">
-          <h2>Estudios</h2>
-          <ul class="mainEstudio--lista">
+      <div class="row mainEstudio--items">
+        <div class="col-6">
+          <ul class="mainEstudio--items-lista">
             <li>OCT</li>
             <li>UBM</li>
             <li>Paquimetría corneal</li>
@@ -112,9 +111,27 @@
             <li>Campovisual Humphrey</li>
           </ul>
         </div>
+        <div class="col-6">
+          <div>
+            <a href="portal.html" class="btn btn-turno"
+              >AGENDAR UN TURNO
+              <img
+                class="agendar un turno"
+                src="./img/calendario.png"
+                alt="ytube_logo"
+                width="50px"
+                ,
+                height="50px"
+                ,
+              />
+            </a>
+          </div>
+        </div>
       </div>
     </main>
-    <section class="bannerEstudio"></section>
+    <div class="row justify-content-between">
+      <div class="banner"></div>
+    </div>
     <footer class="footer container-fluid">
       <div class="row footerRow">
         <div class="col-lg-2 col-xs-12 footer-brand">
