--- a/estudios.html
+++ b/estudios.html
@@ -98,39 +98,53 @@
     </header>
     <main class="container-fluid mainEstudio">
       <div class="row mainEstudio--items">
-        <div class="col-6">
+        <div class="col-lg-3 col-md-12">
           <ul class="mainEstudio--items-lista">
             <li>OCT</li>
             <li>UBM</li>
             <li>Paquimetría corneal</li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-md-12">
+          <ul class="mainEstudio--items-lista">
             <li>Topografía corneal</li>
             <li>Microscopía especular</li>
             <li>AutoLensometro digital</li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-md-12">
+          <ul class="mainEstudio--items-lista">
             <li>IOL master</li>
             <li>Ecometría</li>
             <li>Campovisual Humphrey</li>
           </ul>
         </div>
-        <div class="col-6">
-          <div>
-            <a href="portal.html" class="btn btn-turno"
-              >AGENDAR UN TURNO
-              <img
-                class="agendar un turno"
-                src="./img/calendario.png"
-                alt="ytube_logo"
-                width="50px"
-                ,
-                height="50px"
-                ,
-              />
-            </a>
-          </div>
+        <div class="col-lg-3 col-md-12">
+          <a href="portal.html" class="btn btn-turno"
+            >AGENDAR UN TURNO
+            <img
+              class="agendar un turno"
+              src="./img/calendario.png"
+              alt="ytube_logo"
+              width="50px"
+              ,
+              height="50px"
+              ,
+            />
+          </a>
         </div>
       </div>
     </main>
-    <div class="row justify-content-between">
-      <div class="banner"></div>
+    <div class="row">
+      <div class="col-12">
+        <div class="banner">
+          <img
+            class="optometry"
+            src="./img/optometry2.jpg"
+            alt="imagen optometría"
+          />
+        </div>
+      </div>
     </div>
     <footer class="footer container-fluid">
       <div class="row footerRow">
