aplico mixins a sass y mejora de diseño de la pagina

--- a/cirugias.html
+++ b/cirugias.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="CENTINO, Centro Integral de Oftalmología, cuenta con quirófanos equipados con la última tecnología y con un equipo quirúrgico profesional y experiente, para asegurarle la mejor atención y tratamiento."
+      content="CENTINO, Centro Integral de Oftalmología, cuenta con quirófanos equipados con la última tecnología y con un equipo quirúrgico profesional y experiente para asegurarle la mejor atención en su intervención."
     />
     <meta
       name="keywords"
-      content="OFTALMOLOGO, OFTALMOLOGA, OFTALMOLOGIA, OCULISTA, CATARATAS, RETINA, ANTEOJOS, VISTA, OJO, OJOS"
+      content="OFTALMOLOGO, OFTALMOLOGA, OFTALMOLOGIA, OCULISTA, VISTA, OJO, OJOS,CATARATAS, RETINA, MACULOPATIA, ANTEOJOS"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
