--- a/estudios.html
+++ b/estudios.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="keywords"
-      content="OFTALMOLOGO, OFTALMOLOGA, OFTALMOLOGIA, OCULISTA, CATARATAS, RETINA, ANTEOJOS, VISTA, OJO, OJOS"
+      content="OFTALMOLOGO, OFTALMOLOGA, OFTALMOLOGIA, OCULISTA, VISTA, OJO, OJOS,CATARATAS, RETINA, MACULOPATIA, ANTEOJOS"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
@@ -97,55 +97,38 @@
       </nav>
     </header>
     <main class="container-fluid mainEstudio">
-      <div class="row mainEstudio--items">
-        <div class="col-lg-3 col-md-12">
-          <ul class="mainEstudio--items-lista">
+      <div class="row justify-content-between section1Estudio">
+        <div class="col-12 section1Estudio--estudio">
+          <h2>ESTUDIOS</h2>
+          <ul>
+            <li>IOL master</li>
+            <li>Ecometría</li>
+            <li>Campovisual Humphrey</li>
             <li>OCT</li>
             <li>UBM</li>
             <li>Paquimetría corneal</li>
-          </ul>
-        </div>
-        <div class="col-lg-3 col-md-12">
-          <ul class="mainEstudio--items-lista">
             <li>Topografía corneal</li>
             <li>Microscopía especular</li>
             <li>AutoLensometro digital</li>
           </ul>
         </div>
-        <div class="col-lg-3 col-md-12">
-          <ul class="mainEstudio--items-lista">
-            <li>IOL master</li>
-            <li>Ecometría</li>
-            <li>Campovisual Humphrey</li>
-          </ul>
-        </div>
-        <div class="col-lg-3 col-md-12">
-          <a href="portal.html" class="btn btn-turno"
-            >AGENDAR UN TURNO
-            <img
-              class="agendar un turno"
-              src="./img/calendario.png"
-              alt="ytube_logo"
-              width="50px"
-              ,
-              height="50px"
-              ,
-            />
-          </a>
-        </div>
+      </div>
+      <div class="col-12 mainIndex--turno--btn">
+        <a href="portal.html" class="btn btn-main"
+          >AGENDAR UN TURNO
+          <img
+            class="agendar un turno"
+            src="./img/calendario.png"
+            alt="ytube_logo"
+            width="50px"
+            ,
+            height="50px"
+            ,
+          />
+        </a>
       </div>
     </main>
-    <div class="row">
-      <div class="col-12">
-        <div class="banner">
-          <img
-            class="optometry"
-            src="./img/optometry2.jpg"
-            alt="imagen optometría"
-          />
-        </div>
-      </div>
-    </div>
+    <section class="bannerEstudios"></section>
     <footer class="footer container-fluid">
       <div class="row footerRow">
         <div class="col-lg-2 col-xs-12 footer-brand">
