--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="CENTINO, Centro Integral de Oftalmología ubicado en la provincia de Buenos Aires, Argentina. Agende su turno con un especialista.">
-    <meta name="keywords" content="OFTALMOLOGO, OFTALMOLOGA, OFTALMOLOGIA, OCULISTA, CATARATAS, RETINA, ANTEOJOS, VISTA, OJO, OJOS">
+    <meta name="keywords" content="OFTALMOLOGO, OFTALMOLOGA, OFTALMOLOGIA, OCULISTA, VISTA, OJO, OJOS,CATARATAS, RETINA, MACULOPATIA, ANTEOJOS">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -97,8 +97,8 @@
               <p>Centro Integral Oftalmológico de alta complejidad para la salud visual</p>
             </div>
           </div>
-          <div class="row">
-            <div class="col-12 welcome">
+          <div class="row mainIndex--turno">
+          <div class="col-12 mainIndex--turno--btn">
       <a href="portal.html" class="btn btn-main">AGENDAR UN TURNO <img
         class="agendar un turno"
         src="./img/calendario.png"
@@ -106,7 +106,7 @@
         width="50px",
         height="50px",
       /> </a>
-          </div>
+    </div>
         </div>
       <div class="row justify-content-between mt-5 ppage">
         <div class="col-lg-4 col-md-4 col-xs-12 ppage--item">
@@ -205,7 +205,7 @@
               >
             </div>
             <div class="col-12 mt-5 mb-5">
-              <button type="submit" class="btn btn-primary">Enviar</button>
+              <button type="submit" class="btn btn-primary btn-formulario">Enviar</button>
             </div>
           </form>
         </div>
