--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="CENTINO, Centro Integral de Oftalmología, fue creado en el año 2021 por la Dra...."
+      content="CENTINO, Centro Integral de Oftalmología, fue creado en el año 2021 por la Dra"
     />
     <meta
       name="keywords"
-      content="OFTALMOLOGO, OFTALMOLOGA, OFTALMOLOGIA, OCULISTA, CATARATAS, RETINA, ANTEOJOS, VISTA, OJO, OJOS"
+      content="OFTALMOLOGO, OFTALMOLOGA, OFTALMOLOGIA, OCULISTA, VISTA, OJO, OJOS,CATARATAS, RETINA, MACULOPATIA, ANTEOJOS"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
