--- a/especialidades.html
+++ b/especialidades.html
@@ -98,7 +98,7 @@
     </header>
     <main class="container-fluid mainEspecialidad">
       <div class="row especialidad">
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-6 col-md-12 especialidad--item">
           <div>
             <h2>RETINA</h2>
             <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
@@ -119,7 +119,7 @@
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-6 col-md-12 especialidad--item">
           <div>
             <h2>GLAUCOMA</h2>
             <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
@@ -142,7 +142,7 @@
         </div>
       </div>
       <div class="row especialidad">
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-6 col-md-12 especialidad--item">
           <h2>CÓRNEA Y CATARATAS</h2>
           <div>
             <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
@@ -157,7 +157,7 @@
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-6 col-md-12 especialidad--item">
           <div>
             <h2>UVEÍTIS</h2>
             <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
@@ -174,7 +174,7 @@
         </div>
       </div>
       <div class="row especialidad">
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-6 col-md-12 especialidad--item">
           <div>
             <h2>SUPERFICIE OCULAR</h2>
             <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
@@ -189,7 +189,7 @@
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-6 col-md-12 especialidad--item">
           <div>
             <h2>ESTRABISMO</h2>
             <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
@@ -206,7 +206,7 @@
         </div>
       </div>
       <div class="row especialidad">
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-6 col-md-12 especialidad--item">
           <div>
             <h2>VÍAS LAGRIMALES Y PLÁSTICA OCULAR</h2>
             <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
@@ -215,7 +215,7 @@
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-6 col-md-12 especialidad--item">
           <div>
             <h2>NEUROOFTALMOLOGÍA</h2>
             <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
@@ -226,7 +226,7 @@
         </div>
       </div>
       <div class="row especialidad">
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-6 col-md-12 especialidad--item">
           <div>
             <h2>BAJA VISIÓN</h2>
             <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
@@ -248,7 +248,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-6 col-md-12 especialidad--item">
           <div>
             <h2>CLÍNICA OFTALMOLÓGICA</h2>
             <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
