cambio imagen y formato de form en portal

--- a/portal.html
+++ b/portal.html
@@ -98,48 +98,44 @@
     </header>
     <main class="container-fluid mainPortal">
       <div class="row">
-        <div class="section1">
-          <div class="col-lg-4 col-md-6 col-xs-12 form--container">
-            <form class="formulario">
-              <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label"
-                  >Usuario</label
-                >
-                <input
-                  type="email"
-                  class="form-control"
-                  id="exampleInputEmail1"
-                  aria-describedby="emailHelp"
-                />
-                <div id="emailHelp" class="form-text">Número de Paciente</div>
-              </div>
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label"
-                  >Contraseña</label
-                >
-                <input
-                  type="password"
-                  class="form-control"
-                  id="exampleInputPassword1"
-                />
-              </div>
-              <div class="mb-3 form-check">
-                <input
-                  type="checkbox"
-                  class="form-check-input"
-                  id="exampleCheck1"
-                />
-                <label class="form-check-label" for="exampleCheck1"
-                  >Recordame</label
-                >
-              </div>
-              <button type="submit" class="btn btn-primary">Ingresar</button>
-              <div class="forgetPass">
-                <h3>¿Olvidaste la contraseña?</h3>
-                <h3>¿No tenés una cuenta? Registrate</h3>
-              </div>
-            </form>
-          </div>
+        <div class="col-lg-6 col-md-6 col-xs-12 form--container">
+          <form class="formulario">
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Usuario</label>
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+              />
+              <div id="emailHelp" class="form-text">Número de Paciente</div>
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label"
+                >Contraseña</label
+              >
+              <input
+                type="password"
+                class="form-control"
+                id="exampleInputPassword1"
+              />
+            </div>
+            <div class="mb-3 form-check">
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="exampleCheck1"
+              />
+              <label class="form-check-label" for="exampleCheck1"
+                >Recordame</label
+              >
+            </div>
+            <button type="submit" class="btn btn-primary">Ingresar</button>
+            <div class="forgetPass">
+              <h3>¿Olvidaste la contraseña?</h3>
+              <h3>¿No tenés una cuenta? Registrate</h3>
+            </div>
+          </form>
         </div>
       </div>
     </main>
