cambio imagen y formato de form en portal

--- a/portal.html
+++ b/portal.html
@@ -25,11 +25,7 @@
     <header class="header">
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">
-          <img
-            class="logo-brand"
-            src="./img/Black on Transparent.png"
-            alt="logo"
-          />
+          <img class="logo-brand" src="./img/logo.png" alt="logo" />
         </a>
         <button
           class="navbar-toggler"
@@ -143,11 +139,7 @@
       <div class="row footerRow">
         <div class="col-lg-2 col-xs-12 footer-brand">
           <a href="index.html">
-            <img
-              class="logo-brand"
-              src="./img/Black on Transparent.png"
-              alt="logo"
-            />
+            <img class="logo-brand" src="./img/logo.png" alt="logo" />
           </a>
         </div>
         <div class="col-lg-2 col-xs-12 footer-copywrite">
