--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a class="navbar-brand" href="index.html">
           <img
             class="logo-brand"
-            src="./img/Black on Transparent.png"
+            src="./img/logo.png"
             alt="logo"
           />
         </a>
@@ -147,8 +147,8 @@
               <input
                 type="nya"
                 class="form-control"
-                id="exampleFormControlInput1"
-                placeholder=""
+                id="nya"
+                required
               />
             </div>
             <div class="mb-3">
@@ -158,7 +158,8 @@
               <input
                 type="telefono"
                 class="form-control"
-                id="exampleFormControlInput1"
+                id="tel"
+                name="telefono"
                 placeholder=""
               />
             </div>
@@ -169,8 +170,9 @@
               <input
                 type="email"
                 class="form-control"
-                id="exampleFormControlInput1"
-                placeholder="nombre@ejemplo.com"
+                id="username"
+                name="email" 
+                placeholder="nombre@ejemplo.com" required
               />
             </div>
             <div class="mb-3">
@@ -217,7 +219,7 @@
         <a href="index.html">
           <img
             class="logo-brand"
-            src="./img/Black on Transparent.png"
+            src="./img/logo.png"
             alt="logo"
           />
         </a>
