--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -94,15 +94,10 @@
     </header>
     <main class="container-fluid-main">
       <div class="novedades">
-        <div class="novedades--campañas">
-          <h2>Campañas<span class="badge bg-secondary">Novedad</span></h2>
-        </div>
-        <div class="novedades--contacto">
-          <h2>
-            ¡Enterate de todo lo que estamos haciendo a través de nuestras redes
-            sociales!
-          </h2>
-        </div>
+        <h2>
+          ¡Enterate de todo lo que estamos haciendo a través de nuestras redes
+          sociales!
+        </h2>
       </div>
       <div class="row carousel--container">
         <div class="col-12 carousel--container--item">
@@ -120,10 +115,18 @@
                 />
               </div>
               <div class="carousel-item">
-                <img src="./img/op.jpg" class="d-block w-100" alt="slide2" />
+                <img
+                  src="./img/op-min.jpg"
+                  class="d-block w-100"
+                  alt="slide2"
+                />
               </div>
               <div class="carousel-item">
-                <img src="./img/or.jpg" class="d-block w-100" alt="slide3" />
+                <img
+                  src="./img/or-min.jpg"
+                  class="d-block w-100"
+                  alt="slide3"
+                />
               </div>
             </div>
           </div>
