--- a/cirugias.html
+++ b/cirugias.html
@@ -94,7 +94,7 @@
     </header>
     <main class="container-fluid mainCirugia">
       <div class="row justify-content-between section1Cirugia">
-        <div class="col-lg-2 col-md-2 col-xs-12 section1Cirugia--cirugia">
+        <div class="col-lg-2 col-md-12 section1Cirugia--cirugia">
           <h2>CIRUGÍAS REFRACTIVAS Y DE CATARATAS</h2>
           <ul>
             <li>Cataratas</li>
@@ -103,26 +103,23 @@
             <li>ICL</li>
           </ul>
         </div>
-        <div class="col-lg-2 col-md-2 col-xs-12 section1Cirugia--cirugia">
-          <h2>CIRUGÍAS DE CÓRNEA</h2>
+        <div class="col-lg-2 col-md-12 section1Cirugia--cirugia">
+          <h2>CIRUGÍAS / TRANSPLANTES DE CÓRNEA</h2>
           <ul>
             <li>Anillos intraestromales</li>
-          </ul>
-          <h2>TRANSPLANTES DE CÓRNEA</h2>
-          <ul>
             <li>DSAEK</li>
             <li>DALK</li>
             <li>Queratoplastia penetrante</li>
           </ul>
         </div>
-        <div class="col-lg-2 col-md-2 col-xs-12 section1Cirugia--cirugia">
+        <div class="col-lg-2 col-md-12 section1Cirugia--cirugia">
           <h2>CIRUGÍAS DE GLAUCOMA</h2>
           <ul>
             <li>Trabeculectomía</li>
             <li>Iridectomía con Yag láser</li>
           </ul>
         </div>
-        <div class="col-lg-2 col-md-2 col-xs-12 section1Cirugia--cirugia">
+        <div class="col-lg-2 col-md-12 section1Cirugia--cirugia">
           <h2>CIRUGÍAS DE RETINA</h2>
           <ul>
             <li>Vitrectomía</li>
@@ -133,7 +130,7 @@
             <li>Aplicaciones intravítreas de antiangionénicos</li>
           </ul>
         </div>
-        <div class="col-lg-2 col-md-2 col-xs-12 section1Cirugia--cirugia">
+        <div class="col-lg-2 col-md-12 section1Cirugia--cirugia">
           <h2>CIRUGÍAS PLÁSTICAS</h2>
           <ul>
             <li>Ectropión</li>
@@ -145,7 +142,7 @@
             <li>Biopsias conjuntivales</li>
           </ul>
         </div>
-        <div class="col-lg-2 col-md-2 col-xs-12 section1Cirugia--cirugia">
+        <div class="col-lg-2 col-md-12 section1Cirugia--cirugia">
           <h2>OTROS PROCEDIMIENTOS</h2>
           <ul>
             <li>Estrabismo</li>
