--- a/especialidades.html
+++ b/especialidades.html
@@ -25,7 +25,7 @@
     <header class="header">
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">
-          <img class="logo-brand" src="./img/logo" alt="logo" />
+          <img class="logo-brand" src="./img/logo.png" alt="logo" />
         </a>
         <button
           class="navbar-toggler"
