--- a/estudios.html
+++ b/estudios.html
@@ -44,7 +44,7 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link" aria-current="page" href="index.html"
                 >Inicio</a
               >
             </li>
@@ -55,7 +55,7 @@
               <a class="nav-link" href="especialidades.html">Especialidades</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="estudios.html">Estudios</a>
+              <a class="nav-link active" href="estudios.html">Estudios</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="cirugias.html">Cirugías</a>
@@ -138,21 +138,21 @@
           </h2>
         </div>
         <div class="col-lg-8 col-xs-12 footer-rrss">
-          <a href="https://www.facebook.com/">
+          <a href="https://www.facebook.com/" target="_blank">
             <img
               class="logo-rrss"
               src="./img/logo-de-facebook.png"
               alt="fb_logo"
             />
           </a>
-          <a href="https://www.instagram.com">
+          <a href="https://www.instagram.com" target="_blank">
             <img
               class="logo-rrss"
               src="./img/logotipo-de-instagram.png"
               alt="ig_logo"
             />
           </a>
-          <a href="https://www.whatsapp.com">
+          <a href="https://www.whatsapp.com" target="_blank">
             <img
               class="logo-rrss"
               src="./img/logotipo-de-whatsapp.png"
