--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -49,7 +49,9 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="nuestrocentro.html">Nuestro Centro</a>
+              <a class="nav-link active" href="nuestrocentro.html"
+                >Nuestro Centro</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="especialidades.html">Especialidades</a>
@@ -102,26 +104,61 @@
           >
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img
-                  src="./img/child-text.jpg"
-                  class="d-block w-100"
-                  alt="slide1"
-                />
+                <img src="./img/child.jpg" class="d-block w-100" alt="slide1" />
               </div>
               <div class="carousel-item">
-                <img
-                  src="./img/op-min.jpg"
-                  class="d-block w-100"
-                  alt="slide2"
-                />
+                <img src="./img/op.jpg" class="d-block w-100" alt="slide2" />
               </div>
               <div class="carousel-item">
-                <img
-                  src="./img/or-min.jpg"
-                  class="d-block w-100"
-                  alt="slide3"
-                />
+                <img src="./img/or.jpg" class="d-block w-100" alt="slide3" />
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card--container">
+        <div class="row">
+          <div class="col-lg-3 col-md-12 card">
+            <div class="card-body">
+              <h5 class="card-title">QUIENES SOMOS</h5>
+              <p class="card-text">
+                Somos un centro de alta complejidad dedicados al diagnóstico y
+                tratamiento de patologías oftalmológicas.
+              </p>
+              <a href="#" class="card-link">Ver Especialistas</a>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-12 card">
+            <div class="card-body">
+              <h5 class="card-title">TRATAMIENTOS</h5>
+              <p class="card-text">
+                Tratamos patologías tales como: miopía, catarata, opacificación
+                capsular, astigmatismo, glaucoma, hipermetropía, presbicia,
+                estrabismo, chalazión, pterigion, desprendimiento de retina,
+                degeneración macular, etc.
+              </p>
+              <a href="#" class="card-link">Ver Estudios</a>
+              <a href="#" class="card-link">Ver Cirugías</a>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-12 card">
+            <div class="card-body">
+              <h5 class="card-title">TECNOLOGÍA</h5>
+              <p class="card-text">
+                Contamos con equipamiento de última tecnología y un equipo
+                médico calificado y de gran trayectoria y calidez.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-12 card">
+            <div class="card-body">
+              <h5 class="card-title">ALCANCE</h5>
+              <p class="card-text">
+                Atendemos a pacientes de todo el país y contamos con un sistema
+                integral de agendamiento de turnos online y acceso a historia
+                clínica.
+              </p>
+              <a href="#" class="card-link">Ver Prepagas y Obra Social</a>
             </div>
           </div>
         </div>
@@ -140,21 +177,21 @@
           </h2>
         </div>
         <div class="col-lg-8 col-xs-12 footer-rrss">
-          <a href="https://www.facebook.com/">
+          <a href="https://www.facebook.com/" target="_blank">
             <img
               class="logo-rrss"
               src="./img/logo-de-facebook.png"
               alt="fb_logo"
             />
           </a>
-          <a href="https://www.instagram.com">
+          <a href="https://www.instagram.com" target="_blank">
             <img
               class="logo-rrss"
               src="./img/logotipo-de-instagram.png"
               alt="ig_logo"
             />
           </a>
-          <a href="https://www.whatsapp.com">
+          <a href="https://www.whatsapp.com" target="_blank">
             <img
               class="logo-rrss"
               src="./img/logotipo-de-whatsapp.png"
