--- a/portal.html
+++ b/portal.html
@@ -44,7 +44,7 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link" aria-current="page" href="index.html"
                 >Inicio</a
               >
             </li>
@@ -62,7 +62,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link active dropdown-toggle"
                 href="portal.html"
                 id="navbarDropdownMenuLink"
                 role="button"
@@ -94,7 +94,7 @@
     </header>
     <main class="container-fluid mainPortal">
       <div class="row">
-        <div class="col-lg-6 col-md-6 col-xs-12 form--container">
+        <div class="col-lg-3 col-md-6 col-xs-12 form--container">
           <form class="formulario">
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Usuario</label>
@@ -146,21 +146,21 @@
           </h2>
         </div>
         <div class="col-lg-8 col-xs-12 footer-rrss">
-          <a href="https://www.facebook.com/">
+          <a href="https://www.facebook.com/" target="_blank">
             <img
               class="logo-rrss"
               src="./img/logo-de-facebook.png"
               alt="fb_logo"
             />
           </a>
-          <a href="https://www.instagram.com">
+          <a href="https://www.instagram.com" target="_blank">
             <img
               class="logo-rrss"
               src="./img/logotipo-de-instagram.png"
               alt="ig_logo"
             />
           </a>
-          <a href="https://www.whatsapp.com">
+          <a href="https://www.whatsapp.com" target="_blank">
             <img
               class="logo-rrss"
               src="./img/logotipo-de-whatsapp.png"
