arreglos finales de diseño para entrega del proyecto

--- a/cirugias.html
+++ b/cirugias.html
@@ -155,6 +155,20 @@
           </ul>
         </div>
       </div>
+      <div class="col-12 mainIndex--turno--btn">
+        <a href="portal.html" class="btn btn-main"
+          >AGENDAR UN TURNO CON ESPECIALISTA
+          <img
+            class="agendar un turno"
+            src="./img/calendario.png"
+            alt="ytube_logo"
+            width="50px"
+            ,
+            height="50px"
+            ,
+          />
+        </a>
+      </div>
     </main>
     <section class="bannerCirugia"></section>
     <footer class="footer container-fluid">
