--- a/especialidades.html
+++ b/especialidades.html
@@ -96,127 +96,22 @@
     </header>
     <main class="container-fluid mainEspecialidad">
       <div class="row especialidad">
-        <div class="col-lg-6 col-md-12 especialidad--item">
+        <h2>RETINA</h2>
+        <div class="col-lg-12 col-md-12 especialidad--item--container">
           <div>
-            <h2>RETINA</h2>
-            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctora.png" alt="foto_doctor" />
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Martes</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
           <div>
-            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Miércoles y Jueves</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-          <div>
-            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Viernes</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-12 especialidad--item">
-          <div>
-            <h2>GLAUCOMA</h2>
-            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Lunes y Martes</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-          <div>
-            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Miércoles y Jueves</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-          <div>
-            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Lunes y Martes</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-        </div>
-      </div>
-      <div class="row especialidad">
-        <div class="col-lg-6 col-md-12 especialidad--item">
-          <h2>CÓRNEA Y CATARATAS</h2>
-          <div>
-            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Miércoles y Jueves</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-          <div>
-            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Viernes</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-12 especialidad--item">
-          <div>
-            <h2>UVEÍTIS</h2>
-            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Viernes</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-          <div>
-            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Lunes y Martes</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-        </div>
-      </div>
-      <div class="row especialidad">
-        <div class="col-lg-6 col-md-12 especialidad--item">
-          <div>
-            <h2>SUPERFICIE OCULAR</h2>
-            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Lunes y Martes</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-          <div>
-            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Miércoles y Jueves</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-12 especialidad--item">
-          <div>
-            <h2>ESTRABISMO</h2>
-            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Lunes y Martes</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-          <div>
-            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Lunes y Martes</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-        </div>
-      </div>
-      <div class="row especialidad">
-        <div class="col-lg-6 col-md-12 especialidad--item">
-          <div>
-            <h2>VÍAS LAGRIMALES Y PLÁSTICA OCULAR</h2>
-            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
-            <h3>Dr/Dra. APELLIDO, Nombre</h3>
-            <h4>Lunes y Martes</h4>
-            <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-12 especialidad--item">
-          <div>
-            <h2>NEUROOFTALMOLOGÍA</h2>
-            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
+            <img src="./img/doctor.png" alt="foto_doctor" />
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Miércoles</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
@@ -224,46 +119,231 @@
         </div>
       </div>
       <div class="row especialidad">
-        <div class="col-lg-6 col-md-12 especialidad--item">
+        <h2>GLAUCOMA</h2>
+        <div class="col-lg-12 col-md-12 especialidad--item--container">
           <div>
-            <h2>BAJA VISIÓN</h2>
-            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
+            <img src="./img/doctor.png" alt="foto_doctor" />
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Miércoles</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
           <div>
-            <h2>GUARDIA OFTALMOLÓGICA</h2>
-            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
+            <img src="./img/doctora.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Miércoles</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
-            <div>
-              <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
-              <h3>Dr/Dra. APELLIDO, Nombre</h3>
-              <h4>Lunes y Martes</h4>
-              <h5><a href="portal.html">Enviar Mensaje</a></h5>
-            </div>
           </div>
         </div>
-        <div class="col-lg-6 col-md-12 especialidad--item">
+      </div>
+      <div class="row especialidad">
+        <h2>CÓRNEA Y CATARATAS</h2>
+        <div class="col-lg-12 col-md-12 especialidad--item--container">
           <div>
-            <h2>CLÍNICA OFTALMOLÓGICA</h2>
-            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
+            <img src="./img/doctor.png" alt="foto_doctor" />
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Miércoles</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
           <div>
-            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
+            <img src="./img/doctora.png" alt="foto_doctor" />
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Martes</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
           <div>
-            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+        </div>
+      </div>
+      <div class="row especialidad">
+        <h2>UVEÍTIS</h2>
+        <div class="col-lg-12 col-md-12 especialidad--item--container">
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctora.png" alt="foto_doctor" />
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+        </div>
+      </div>
+      <div class="row especialidad">
+        <h2>SUPERFICIE OCULAR</h2>
+        <div class="col-lg-12 col-md-12 especialidad--item--container">
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctora.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+        </div>
+      </div>
+      <div class="row especialidad">
+        <h2>ESTRABISMO</h2>
+        <div class="col-lg-12 col-md-12 especialidad--item--container">
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctora.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+        </div>
+      </div>
+      <div class="row especialidad">
+        <h2>VÍAS LAGRIMALES Y PLÁSTICA OCULAR</h2>
+        <div class="col-lg-12 col-md-12 especialidad--item--container">
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctora.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+        </div>
+      </div>
+      <div class="row especialidad">
+        <h2>NEUROOFTALMOLOGÍA</h2>
+        <div class="col-lg-12 col-md-12 especialidad--item--container">
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctora.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+        </div>
+      </div>
+      <div class="row especialidad">
+        <h2>BAJA VISIÓN</h2>
+        <div class="col-lg-12 col-md-12 especialidad--item--container">
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctora.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+        </div>
+      </div>
+      <div class="row especialidad">
+        <h2>GUARDIA OFTALMOLÓGICA</h2>
+        <div class="col-lg-12 col-md-12 especialidad--item--container">
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctora.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+        </div>
+      </div>
+      <div class="row especialidad">
+        <h2>CLÍNICA OFTALMOLÓGICA</h2>
+        <div class="col-lg-12 col-md-12 especialidad--item--container">
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctora.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <img src="./img/doctor.png" alt="foto_doctor" />
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
