--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -125,7 +125,9 @@
                 Somos un centro de alta complejidad dedicados al diagnóstico y
                 tratamiento de patologías oftalmológicas.
               </p>
-              <a href="#" class="card-link">Ver Especialistas</a>
+              <a href="especialidades.html" class="card-link"
+                >Ver Especialistas</a
+              >
             </div>
           </div>
           <div class="col-lg-3 col-md-12 card">
@@ -137,8 +139,8 @@
                 estrabismo, chalazión, pterigion, desprendimiento de retina,
                 degeneración macular, etc.
               </p>
-              <a href="#" class="card-link">Ver Estudios</a>
-              <a href="#" class="card-link">Ver Cirugías</a>
+              <a href="estudios.html" class="card-link">Ver Estudios</a>
+              <a href="cirugias.html" class="card-link">Ver Cirugías</a>
             </div>
           </div>
           <div class="col-lg-3 col-md-12 card">
