--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -118,7 +118,7 @@
       </div>
       <div class="card--container">
         <div class="row">
-          <div class="col-lg-3 col-md-12 card">
+          <div class="col-lg-3 col-md-12 card--container--card">
             <div class="card-body">
               <h5 class="card-title">QUIENES SOMOS</h5>
               <p class="card-text">
@@ -130,7 +130,7 @@
               >
             </div>
           </div>
-          <div class="col-lg-3 col-md-12 card">
+          <div class="col-lg-3 col-md-12 card--container--card">
             <div class="card-body">
               <h5 class="card-title">TRATAMIENTOS</h5>
               <p class="card-text">
@@ -143,7 +143,7 @@
               <a href="cirugias.html" class="card-link">Ver Cirugías</a>
             </div>
           </div>
-          <div class="col-lg-3 col-md-12 card">
+          <div class="col-lg-3 col-md-12 card--container--card">
             <div class="card-body">
               <h5 class="card-title">TECNOLOGÍA</h5>
               <p class="card-text">
@@ -152,7 +152,7 @@
               </p>
             </div>
           </div>
-          <div class="col-lg-3 col-md-12 card">
+          <div class="col-lg-3 col-md-12 card--container--card">
             <div class="card-body">
               <h5 class="card-title">ALCANCE</h5>
               <p class="card-text">
